# qt_rtrac

./: .gitignore  CMakeLists.txt  ObjLoader.cpp  ObjLoader.h  ObjModel.h  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  scene_loader.cpp  scene_loader.h  window.cpp  window.h
shaders/: fragment-core.glsl  fragment.glsl  vertex-core.glsl  vertex.glsl
